# ACF-pir-data

./: .gitignore  MANIFEST.in  README.md  ingest_data.R  pyproject.toml  requirements.txt
PIR_Pipeline/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
PIR_Pipeline/code/: create_sphinx_docs.sh  unit_tests.sh
PIR_Pipeline/documentation/: PIR Data Dictionary.csv  PIR Data Dictionary.rds  pir_training.md  qa-process-documentation.md  technical_documentation.md
PIR_Pipeline/pir_watcher/src/pir_watcher/: createDirectories.py
PIR_Pipeline/pir_watcher/src/pir_watcher/pir_ingestion/: _scrap.R
PIR_Pipeline/sphinx/source/: conf.py
PIR_Pipeline/sql/: pir_schema.sql
PIR_Pipeline/src/pir_pipeline/: config.py  configureDB.py  createDirectories.py  createRProj.py  extractAccess.py  ingestData.py  installPackages.py  linkQuestions.py  pirSetup.py  pirStatus.py  setupDB.py  startDashboard.py  startTraining.py
PIR_Pipeline/src/pir_pipeline/_common/R/: connectDB.R  dropNull.R  errorMessage.R  getSchemas.R  installPackages.R  logMessage.R  mergeUtilities.R  missingDescribe.R  moveFiles.R  pipeExpr.R  pop.R  replaceInto.R  requirePackages.R  startLog.R  writeLog.R
PIR_Pipeline/src/pir_pipeline/_common/installation/: installPackages.R
PIR_Pipeline/src/pir_pipeline/dashboard/: __init__.py  data.py  db.py  index.py  qa.py  review.py  search.py
PIR_Pipeline/src/pir_pipeline/dashboard/static/: review.js  reviewFlashCard.js  search.js  style.css  utilities.js
PIR_Pipeline/src/pir_pipeline/dashboard/templates/: base.html  claude_html_example.html  index.html  search.html
PIR_Pipeline/src/pir_pipeline/ingestion/: PIRIngestor.py  PIRLinker.py
PIR_Pipeline/src/pir_pipeline/linking/: PIRLinker.py
PIR_Pipeline/src/pir_pipeline/models/: pir_models.py  pir_models_sql_alchemy.py  pir_sql_models.py
PIR_Pipeline/src/pir_pipeline/pir_ingestion/: PIRIngestor.py  ingest_data.R  ingest_diff.R  ingest_pre_2008.R
PIR_Pipeline/src/pir_pipeline/pir_ingestion/tests/: test_extractPirSheets.R  test_ingest_data.R
PIR_Pipeline/src/pir_pipeline/pir_ingestion/utils/: addPirVars.R  addUnmatched.R  appendPirSections.R  cleanOldPirData.R  cleanPirData.R  duplicatedQuestionError.R  extractPirSheets.R  hashVector.R  insertPirData.R  loadPirData.R  loadPirSection.R  mergePirReference.R  missingQuestionError.R  naNumberError.R  pirIngest.R  pirIngestOld.R  responseMergeError.R
PIR_Pipeline/src/pir_pipeline/pir_installation/: Installation_config_script.ps1
PIR_Pipeline/src/pir_pipeline/pir_question_links/: PIRLinker.py  linkQuestions.R
PIR_Pipeline/src/pir_pipeline/pir_question_links/_misc/: exhibit_1.sql  exhibit_3.sql
PIR_Pipeline/src/pir_pipeline/pir_question_links/dashboard/: qldSetup.R  questionLinkDashboard.R
PIR_Pipeline/src/pir_pipeline/pir_question_links/tests/: testSetup.R  test_deleteLink.R
PIR_Pipeline/src/pir_pipeline/pir_question_links/utils/: adHocLinks.R  ad_hoc_links.RDS  checkLinked.R  checkUnlinked.R  cleanQuestions.R  deleteLink.R  determineLink.R  genIntermittentLink.R  genLink.R  genProposedLink.R  genUQID.R  getSchemas.R  getTables.R  inconsistentIDMatch.R  jaccardIDMatch.R  jaccardUnlinked.R  logLink.R  separateCombined.R  updateLinked.R  updateUnlinked.R
PIR_Pipeline/src/pir_pipeline/pir_sql/pir_data/: pir_data_schema.sql
PIR_Pipeline/src/pir_pipeline/pir_sql/pir_logs/: pir_logs_schema.sql
PIR_Pipeline/src/pir_pipeline/pir_sql/pir_question_links/: pir_question_links_schema.sql
PIR_Pipeline/src/pir_pipeline/pir_watcher/: __init__.py  listener.py  watcher.py  watcher_service.py
PIR_Pipeline/src/pir_pipeline/utils/: MockData.py  MySQLUtils.py  SQLAlchemyUtils.py  SQLUtils.py  __init__.py  dashboard_utils.py  make_db_connections.py  mysql_utils.py  paths.py  sql_alchemy_view.py  utils.py
PIR_Pipeline/src/pir_watcher/pir_ingestion/: ingest_data.R
PIR_Pipeline/src/pir_watcher/pir_ingestion/_misc/: views.R
PIR_Pipeline/src/pir_watcher/pir_ingestion/utils/: hashVector.R
PIR_Pipeline/src/pir_watcher/pir_question_links/: _scrap.R
PIR_Pipeline/src/pir_watcher/pir_question_links/_misc/: exhibit_2.sql  exhibits_20240116.R  links_2011.R
PIR_Pipeline/src/pir_watcher/pir_watcher/: watcher_service.py
PIR_Pipeline/test_data/: base_test_2009.xlsx  log2.txt
PIR_Pipeline/tests/: conftest.py
PIR_Pipeline/tests/dashboard/: conftest.py  test_db.py  test_index.py  test_review.py  test_search.py  test_search_selenium.py  test_selenium.py  test_selenium_rev.py
PIR_Pipeline/tests/ingestion/: conftest.py  question.py  test_PIRIngestor.py  test_data_2008.xlsx
PIR_Pipeline/tests/linking/: conftest.py  test_PIRLinker.py
PIR_Pipeline/tests/utils/: conftest.py  make_db_connections.py  test_MySQLUtils.py  test_SQLAlchemyUtils.py  test_dashboard_utils.py  test_mysql_utils.py
Python/pir_watcher/: pyproject.toml  setup.py
Python/pir_watcher/src/: watcher_service.py
Python/pir_watcher/src/pir_watcher/: createDirectories.py  watcher.py
(+442 files in other folders)
