[project]
name = "pir_pipeline"
version = "1.0.0"
authors = [
    { name = "Arch Systems Inc."}
]
description = "Program Information Report ingestion and linking infrastructure."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "PRIVATE :: Do Not Upload"
]
dependencies = [
    "mysql-connector-python", "sphinx", "pandas", "python-dotenv",
    "fuzzywuzzy", "python-Levenshtein", "pytest", "openpyxl", "xlrd",
    "pydantic", "Flask", "SQLAlchemy", "sqlalchemy-utils", "psycopg[binary]",
    "coverage"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/HHS/ACF-pir-data"

[tool.pytest.ini_options]
testpaths = ["tests"]